Fixed scrollbar style within secondary tabs

--- a/src/patternfly/components/Tabs/tabs.scss
+++ b/src/patternfly/components/Tabs/tabs.scss
@@ -91,6 +91,10 @@
     display: flex;
     margin-top: calc(-1 * var(--pf-c-tabs__item--BorderTopWidth));
     border-top: var(--pf-c-tabs__item--BorderTopWidth) solid var(--pf-c-tabs__item--BorderColor);
+
+    .pf-c-tabs__scroll-button {
+      margin-top: calc(-1 * var(--pf-c-tabs__item--BorderTopWidth));
+    }
   }
 
   // Filled style
